--- a/改良版/GameProject.vcxproj
+++ b/改良版/GameProject.vcxproj
@@ -19,10 +19,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Animtion.cpp" />
+    <ClCompile Include="BackGround.cpp" />
+    <ClCompile Include="BackObject.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DelteTime.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="Interfere.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="ItemTimer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerBase.cpp" />
@@ -30,10 +35,15 @@
     <ClCompile Include="Time.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animtion.h" />
+    <ClInclude Include="BackGround.h" />
+    <ClInclude Include="BackObject.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DelteTime.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="Interfere.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemTimer.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerBase.h" />
     <ClInclude Include="Random.h" />
