--- a/改良版/GameProject.vcxproj.filters
+++ b/改良版/GameProject.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="リソース ファイル\UI">
       <UniqueIdentifier>{f275ac6e-bcc0-4e19-9588-0fa226c2ca39}</UniqueIdentifier>
     </Filter>
+    <Filter Include="リソース ファイル\Object">
+      <UniqueIdentifier>{e90a1fb7-9a07-4835-8f5d-7edd2a7721b1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -51,6 +54,21 @@
     <ClCompile Include="Score.cpp">
       <Filter>リソース ファイル\UI</Filter>
     </ClCompile>
+    <ClCompile Include="BackObject.cpp">
+      <Filter>リソース ファイル\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Animtion.cpp">
+      <Filter>リソース ファイル\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="ItemTimer.cpp">
+      <Filter>リソース ファイル\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="Interfere.cpp">
+      <Filter>リソース ファイル\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="BackGround.cpp">
+      <Filter>リソース ファイル\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -78,6 +96,21 @@
       <Filter>リソース ファイル\Item</Filter>
     </ClInclude>
     <ClInclude Include="Score.h">
+      <Filter>リソース ファイル\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="BackObject.h">
+      <Filter>リソース ファイル\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Animtion.h">
+      <Filter>リソース ファイル\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemTimer.h">
+      <Filter>リソース ファイル\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Interfere.h">
+      <Filter>リソース ファイル\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="BackGround.h">
       <Filter>リソース ファイル\UI</Filter>
     </ClInclude>
   </ItemGroup>
